Tried to solve the p-value

--- a/R/05_analysis.qmd
+++ b/R/05_analysis.qmd
@@ -4,6 +4,11 @@ format: html
 editor: visual
 ---
 
+```{r}
+library(purrr)
+library(broom)
+```
+
 ## Data Analysis
 
 ### PCA
@@ -29,28 +34,36 @@ df_mean_intensitities
 
 
 
-
-
-
 flot <- df_no_na_long |> 
-  pivot_wider(names_from = cell_type, values_from = intensity)
-
-View(flot)
-
-flot |> filter(replicate_n != 5) |> 
-  group_by(genes)
+  filter(replicate_n != 5)
   
-  |> 
-  summarise(mean = mean(clp)))
-  
+
+
+wide <- flot |> 
+  pivot_wider(names_from = cell_type,
+              values_from = intensity,
+              values_fn = mean) # the pivot_wider finds duplicate values for intentcity, this is a way to mitigate that issue.
+
+
+
+
+wide |> 
+  group_by(genes) |>
+  mutate(ttest = map(.x = hsc,
+                     .f = ~ t.test(.x,
+                                   alternative = c("two.sided",
+                                                   "less",
+                                                   "greater"),
+                                   conf.level = 0.99)))
+
+
+
+view(wide)
 ```
 
 ```{r}
 
-
-
-
-df_mean_intensitities |> 
+krap <-df_mean_intensitities |> 
   select(!sd) |> 
   pivot_wider(names_from = cell_type, values_from = mean) |> 
   select(!gmp & !hsc & !mep) |> 
