--- a/R/05_analysis.qmd
+++ b/R/05_analysis.qmd
@@ -213,23 +213,23 @@ wide <- flot |>
                                                    "greater"),
                                    conf.level = 0.99)))
 
+
+
+
+#test_plot <- df_mean_intensitities |> 
+#pivot_wider(names_from = cell_type, values_from = c(mean, sd)) |> 
+  #select(mean_gmp, mean_hsc, sd_gmp, sd_hsc) |> 
+  #mutate(fold = mean_gmp/mean_hsc) |> 
+  #mutate(pval = pval(mean_gmp,mean_hsc,4,4,sd_gmp,sd_hsc)) |> 
+  #select(protein_groups,fold,pval)
+
+
+
+
 ```
 
 
-
-test_plot <- df_mean_intensitities |> 
-pivot_wider(names_from = cell_type, values_from = c(mean, sd)) |> 
-  select(mean_gmp, mean_hsc, sd_gmp, sd_hsc) |> 
-  mutate(fold = mean_gmp/mean_hsc) |> 
-  mutate(pval = pval(mean_gmp,mean_hsc,4,4,sd_gmp,sd_hsc)) |> 
-  select(protein_groups,fold,pval)
   
-
-  
-
-<<<<<<< HEAD
-view(wide)
-```
 
 ```{r}
 
