--- a/R/05_analysis.qmd
+++ b/R/05_analysis.qmd
@@ -160,7 +160,12 @@ pval <- function(mu1,mu2,n1,n2,s1,s2){
 ```{r}
 df_mean_intensitities |> 
   filter(cell_type == "hsc" | cell_type == "gmp") |> 
-  filter(protein_groups == "A1L314") |> 
+  filter(protein_groups == "A1L314") 
+```
+
+s
+
+```{r}
   mutate(pval = pval(mean[1],mean[2],4,4,sd[1],sd[2]))
 #ok so this works but how can I let it be mean[gmp] instead of mean[1]. ie a programatical solution...
   mutate(across(matches(".I|.V"), ~ if_else(row_number() %in% grep("in %", name), ./100, .)))
@@ -213,6 +218,10 @@ pivot_wider(names_from = cell_type, values_from = c(mean, sd)) |>
   
 
   
+
+```
+
+```{r}
 
 ```
 
