--- a/R/04_describe.qmd
+++ b/R/04_describe.qmd
@@ -14,9 +14,23 @@ library("tidyverse")
 
 -   What do these data show?
 
+-   What is intensity?
+
 -   How many observations? How many rows and columns?
 
--   What is intensity?
+    The original datasets that have been loaded in each contain the below number of observations and variables
+
+    |                     | hsc  | cmp  | gmp  | clp  | mep  |
+    |---------------------|------|------|------|------|------|
+    | No. of observations | 2196 | 1986 | 2291 | 2382 | 2691 |
+    | No. of variables    | 6    | 6    | 6    | 7    | 6    |
+    | No. of replicates   | 4    | 4    | 4    | 5    | 4    |
+
+    The number of observations corresponds to the number of protein groups and genes that are there in each of the datasets.
+
+    What does each cell type correspond to? (point wise in time?) The cells can either develop in erythroid or granulocyte directions.
+
+    Can the genes / proteins somehow be grouped according to functionality? Ie. are some of them transcription factors, some of them enzymes..? Or can we have any information whatsoever about them?
 
 ## Normalization plot before removing NAs
 
