Lasse saved the day and found a nice wrapper function that substitutes t.test with a version that is easy to use with pipe-operators

--- a/05_analysis_lasse.qmd
+++ b/05_analysis_lasse.qmd
@@ -36,7 +36,7 @@ Perform a welch student t-test to compare the cell types. The function from rsta
 df_no_na_long |>
   group_by(genes,
            protein_groups) |> 
-  pairwise_t_test(intensity ~ cell_type,
+  t_test(intensity ~ cell_type,
                   p.adjust.method = "bonferroni",
                   conf.level = 0.99)
 
