--- a/R/02_clean.qmd
+++ b/R/02_clean.qmd
@@ -6,6 +6,14 @@ editor: visual
 
 ```{r}
 library("tidyverse")
+library("here")
+```
+
+### Load data
+
+```{r}
+
+df_hsc <- load_tsv(file = here("data/01_dat_load_hsc.csv")) 
 ```
 
 ## Missing in this document
@@ -106,7 +114,7 @@ Separating the samples column into replicate number and cell type
 
 ```{r}
 df_long <- df_long |> 
-  separate(sample, into = c("cell_type","replicate_n"), sep = "_rep_")
+  separate(sample, into = c("cell_type","replicate_n"), sep = "_rep_", remove = FALSE)
   
 
 ```
