--- a/R/05_analasys_pca.qmd
+++ b/R/05_analasys_pca.qmd
@@ -3,11 +3,14 @@ library(tidyr)
 library('ggbiplot')
 library(sjmisc) #Unofficial tidyverse package that follows the tidyverse syntax
 
-#Data without rows with N/A
-df_norm_tidy <- df_norm[, -(1:2)] |> na.omit() |> rotate_df()
+#Data without rows with N/A excluding nonnumeric columns (-1:2)
+#df_input <- df_norm[, -(1:2)] |> na.omit() |> rotate_df()
 
-#Projecting data unto principal components (pc), excluding nonnumeric columns (-1:2)
-pc <- prcomp(df_norm_tidy, center = FALSE, scale = FALSE)
+#Augmented data
+df_input <- df_no_na_long[, 'intensity'] |> na.omit() 
+
+#Projecting data unto principal components (pc)
+pc <- prcomp(df_input, center = FALSE, scale = FALSE)
 
 #Gives overview of variability of PC
 print(pc)
@@ -22,7 +25,7 @@ biplot <- ggbiplot(pc,
                    varname.adjust = 1.5,
                    varname.size = 3,
                    groups    = NULL, #visualises datagroups
-                   ellipse   = TRUE,  #Probability elipse
+                   ellipse   = FALSE,  #Probability elipse
                    ellipse.prob = 0.66, #Fraction of observations that should be in ellipse
                    circle    = FALSE,   #Unity circle representing structure correlation in variables
                    var.axes  = FALSE   #Variable vectors, can see correlation from if they're grouped
