--- a/R/05_analysis.qmd
+++ b/R/05_analysis.qmd
@@ -11,6 +11,12 @@ library(tidyverse)
 library(broom)
 ```
 
+## Load Data
+
+```{r}
+df_no_na_long <- read_tsv(file = here("data/03_dat_aug.tsv"))
+```
+
 ## Data Analysis
 
 ### PCA
