--- a/R/05_analysis_Sofia.qmd
+++ b/R/05_analysis_Sofia.qmd
@@ -10,6 +10,12 @@ editor: visual
 library(ggplot2)
 ```
 
+## Load Data
+
+```{r}
+df_no_na_long <- read_tsv(file = here("data/03_dat_aug.tsv"))
+```
+
 ## Data Analysis
 
 ### Data Normalization
