--- a/R/03_augment.qmd
+++ b/R/03_augment.qmd
@@ -16,11 +16,12 @@ df_long <- read_tsv(file = here("data/02_dat_clean.tsv"))
 Proteomics data must be log 2 transformed to have a more compatible scale.
 
 ```{r}
-#log transform long dataframe
+# log transform all numerical values except the ones indicating the replicates
 df_log_long <- df_long |> 
-  #only apply this to non-NA data
-  mutate(across(where(is.numeric), ~log2(. +1)))
-
+  mutate(across(
+    .cols = where(is.numeric) & !c("replicate_n"),
+    .fns = ~log2(. + 1)
+  ))
 ```
 
 ## Deal with Missing Values by Normalization of Intensity
@@ -73,7 +74,6 @@ df_no_na_long <- df_norm_long |>
 df_no_na_wide <- pivot_wider(data = df_no_na_long, id_cols = 'cell_type',
                              names_from = 'protein_groups', values_from = 'intensity')
 ```
-
 
 ### Getting mean values and standard deviation for volcano plot
 
