--- a/R/05_analasys_pca.qmd
+++ b/R/05_analasys_pca.qmd
@@ -7,7 +7,8 @@ library(sjmisc) #Unofficial tidyverse package that follows the tidyverse syntax
 #df_input <- df_norm[, -(1:2)] |> na.omit() |> rotate_df()
 
 #Augmented data
-df_input <- df_no_na_long[, 'intensity'] |> na.omit() 
+df_input <- select(df_no_na_wide, -c(1,2,'O08759_group')) |> na.omit() |>
+  mutate(across(everything(), ~ as.numeric(unlist(.))))
 
 #Projecting data unto principal components (pc)
 pc <- prcomp(df_input, center = FALSE, scale = FALSE)
